SKCMS-3136 : Filtering out ETOPS LIFUS/LC from wave form XML

--- a/data/form/crew_training.xml
+++ b/data/form/crew_training.xml
@@ -381,7 +381,7 @@ elif table == "tmp_ctl_need":
                editable="true">
               <columninfo column="id" label="HeaderId" visible="false"/>
               <columninfo column="part" label="Order" editable="false" width="70"/>
-              <columninfo column="attribute" label="Type" width="100"/>
+              <columninfo column="attribute" label="Type" width="100" filter="(!(id=ETOPS LIFUS/LC))"/>
               <columninfo column="flights" label="Needed Flights" width="100"/>
               <columninfo column="maxdays" label="Max Days" width="100"/>
               <columninfo column="acqual" label="Optional AC Qual" width="100"/>
