SKAM-1068:Design a new form to add crew

--- a/data/form/add_crew_from_sap.xml
+++ b/data/form/add_crew_from_sap.xml
@@ -97,6 +97,7 @@ def delete_from_tmp_crew(context, crew, row):
   context.action('commitAllTables');
   context.action('refreshModel');
   context.action('refreshClient');
+
 ]]></script>
 
 <action name="save" args=""><![CDATA[
@@ -140,6 +141,10 @@ context.action('progress', 'false');
 context.action("reloadForm", "add_crew_from_sap.xml");
 ]]></action>
 
+<action name="insert_row" args=""><![CDATA[
+context.action("insertRow", "new_crew_tbl");
+]]></action>
+
 <action name="delete_selected_row" args=""><![CDATA[
 context.action("deleteRow", "new_crew_tbl");
 ]]></action>
@@ -156,12 +161,12 @@ context.action("deleteRow", "new_crew_tbl");
 <vbox label="New crew" style.border="soft" style.width="1000">
   <text-field label="Result" id="output" value=""/>
   <table id="new_crew_tbl" source="tmp_new_crew_tbl" style.height="400">
-    <columninfo column="empno" label="Empno" visible="true" editable="false"/>
+    <columninfo column="empno" label="Empno" visible="true" editable="true"/>
     <columninfo column="id" label="ID" visible="true" editable="true"/>
-    <columninfo column="name" label="Name" visible="true" editable="false"/>
-    <columninfo column="forenames" label="Forenames" visible="true" editable="false"/>
+    <columninfo column="name" label="Name" visible="true" editable="true"/>
+    <columninfo column="forenames" label="Forenames" visible="true" editable="true"/>
     <columninfo column="bcity" label="Birth city" visible="true" editable="true"/>
-    <columninfo column="bcountry" label="Birth country" visible="true" editable="false"/>
+    <columninfo column="bcountry" label="Birth country" visible="true" editable="true"/>
     <columninfo column="employmentdate" label="Employment date" visible="true" editable="true" date.format="ddMmmyyyy"/>
     <columninfo column="employmentcountry" label="Employment country" visible="true" editable="true"/>
     <columninfo column="region" label="Region" visible="true" editable="true"/>
@@ -181,6 +186,12 @@ context.action("deleteRow", "new_crew_tbl");
   <button label="Reload form">
     <on-click>
       reload();
+    </on-click>
+  </button>
+
+    <button label="Add new crew">
+    <on-click>
+      insert_row();
     </on-click>
   </button>
 
