SKAM-1068:Design a new crew form

--- a/data/form/add_crew_from_sap.xml
+++ b/data/form/add_crew_from_sap.xml
@@ -3,6 +3,7 @@
 
 <title>Add new employees</title>
 
+
 <on-opened>
   setEventEnabled("on-selection-changed", "true");
   setEventEnabled(on-changed, true);
@@ -127,7 +128,7 @@ for row in range(int(context.sm.resolve("${tmp_new_crew_tbl._rowcount}"))):
       extperkey = context.sm.resolve("${crew_unknown[%d,extperkey]}" % inner_row);
       if extperkey == crew['empno']:
         context.action("selectTableRow", "crew_unknown_table", inner_row);
-        context.action("setTableValue", "crew_unknown", inner_row, "corrected", "true");
+        context.action("deleteRow", "crew_unknown_table");
         context.action('commitModel');
         context.action('refreshModel');
         context.action('refreshClient');
@@ -173,6 +174,7 @@ context.action("deleteRow", "new_crew_tbl");
     <columninfo column="homebase" label="Homebase" visible="true" editable="true"/>
     <columninfo column="rank" label="Rank" visible="true" editable="true"/>
     <columninfo column="contract" label="Contract" visible="true" editable="true"/>
+
   </table>
 
 </vbox>
