SKAM-1068:Design a new form to add crew

--- a/data/form/add_crew_from_sap.xml
+++ b/data/form/add_crew_from_sap.xml
@@ -3,6 +3,8 @@
 
 <title>Add new employees</title>
 
+<alias id="valid_bases" source="bases" /> 
+<alias id="valid_rank" source="crew_rank_set" />  
 
 <on-opened>
   setEventEnabled("on-selection-changed", "true");
@@ -161,7 +163,7 @@ context.action("deleteRow", "new_crew_tbl");
 </vbox>
 <vbox label="New crew" style.border="soft" style.width="1000">
   <text-field label="Result" id="output" value=""/>
-  <table id="new_crew_tbl" source="tmp_new_crew_tbl" style.height="400">
+  <table id="new_crew_tbl" source="tmp_new_crew_tbl" style.height="400"> 
     <columninfo column="empno" label="Empno" visible="true" editable="true"/>
     <columninfo column="id" label="ID" visible="true" editable="true"/>
     <columninfo column="name" label="Name" visible="true" editable="true"/>
@@ -171,10 +173,29 @@ context.action("deleteRow", "new_crew_tbl");
     <columninfo column="employmentdate" label="Employment date" visible="true" editable="true" date.format="ddMmmyyyy"/>
     <columninfo column="employmentcountry" label="Employment country" visible="true" editable="true"/>
     <columninfo column="region" label="Region" visible="true" editable="true"/>
-    <columninfo column="homebase" label="Homebase" visible="true" editable="true"/>
-    <columninfo column="rank" label="Rank" visible="true" editable="true"/>
+    <columninfo column="homebase" label="Homebase"
+                column.view="valid_bases"
+                style.display.column="base"
+                visible="true" 
+                editable="true"
+                width="200"/>
+    <columninfo column="rank" label="Rank"
+                column.view="valid_rank"
+                style.display.column="maincat"
+                visible="true" 
+                editable="true"
+                width="200"/>
     <columninfo column="contract" label="Contract" visible="true" editable="true"/>
-
+    <on-changed>
+      setFilter("valid_bases", "(station=CPH)");
+      setFilter("valid_rank", "(id=AA)");
+      refreshClient();
+    </on-changed>
+    <on-selection-changed>
+      setFilter("valid_bases", "(station=CPH)");
+      setFilter("valid_rank", "(id=AA)");
+      refreshClient();
+    </on-selection-changed>
   </table>
 
 </vbox>
